--- a/index.html
+++ b/index.html
@@ -2,37 +2,68 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>fall 2019</title>
+<title>Git Demo in class</title>
 </head>
 
 <body>
 	<div class="container">
-		<header><h1>Oscar Quintana</h1></header>
+		<header><h1> Project two </h1></header>
 		<nav></nav>
 		<section>
 			<header>
-				<h2> This is my about me for class! Enjoy!</h2>
+			<h2> Men's Physique and Social Media </h2>
+			</header>
+			
+			<article><img src="html2-project/assets/images/IMG_1652.jpg" width="400px"></article>
+<p>
+				Men's physique, is a competition class in two of the most prestigious divisions. The divisions are the National Physique Committee, and Internation Federation of Bodybuilding. The sport/competition is not a maintstream subject of today's soceity. Both, I believed to be heavily impacted due to social media. 
+</p>
+			
+			<article><img src="html2-project/assets/images/IMG_9754.jpg" width="400px"></article>
+			
+<p> 
+				Social media, has the power to build up, expose or destroy anything with the simple actions of a few clicks. Unfortunately, doing competitions that involve a strong commitment to a diet program and a hyperthrophy routine are not very mainstream as playing football. 
+			
+			</p>
+			
+			<header>
+				<h2> Digging Much Deeper </h2>
 			</header>
 			<p>
-				I'm 27 years old, I am from Houston, TX. I served as an active duty US Marine for 5 years now currently in the reserves, I'm married with no kids. I currently work as an online coach and trainer. I love taking very long drives and I have a love for watches of all styles. I lived about 5 and a half years on the west coast on Camp Pendleton, CA. My wife is my inspiration to do all things great so we have the life we dream of! I'm a big fan of cats, I own 2, Loki and Luna. Oh, and I compete, I have done 6 competitions, no pro card yet. I look forward to learning in this class and knowing all of you!
-				
+				Social media, although can create a huge impact for an individual who competes and wants to share their experiences and trials through the competition preparation. Such as, inspiring others who follow the athlete on any platform that is public for viewing. These individuals will have created a fan base for others to come up to them for greetings and to take a photo with them.
+			
 			</p>
-				
-			<article><img src="assets/images/mvmt_watch.jpg" width="400px"></article>
-		
-			<article><img src="assets/images/usmc.jpg" width="400px"></article>
 			
-			<article><img src="assets/images/oscar_samantha.JPG" width="400px"></article>
+			<article><img src="html2-project/assets/images/IMG_1484.JPG" width="400px"></article>
 			
-			<article><img src="assets/images/NPC West Coast 2019_Â©MarcelloRostagni2019_NightShow_6777.jpg" width="400px"></article>
-			<article><img src="assets/images/IMG_5073.jpg" width="400px"></article>
+			<header>
+				<h2> There's More with Social Media! </h2>
+			</header>
+			<p>
+				One of the great tools with Social media, is being able to develop a business from it. Competitors tend to become online personal trainers, or contest prep coaches known to many others. The can earn quite an income that is sustainable for the athlete and can expand by their clients word of mouth and their journey.
 			
-		<article></article>
+			</p>
+			
+			<article><img src="html2-project/assets/images/IMG_2509.jpg" width="400px"></article>
+			
+			<article><img src="html2-project/assets/images/LRG_DSC03549.JPG" width="400px"></article>
+			
+			<header> <h2> Conclusion </h2></header>
+			
+			<p>
+				Overall, Men's Physique can be quite the income when using social media and be wildly known so others around the world can know of this sport. Some look up to the ones competing and reach out to them for training. While others admire their hardwork and discipline to their craft.
+			
+			</p>
+			
+			<article><img src="html2-project/assets/images/IMG_3226.jpg" width="400px"></article>
+			
+			
+			
 		</section>
 		<section>
 			<article></article>
 		</section>
 		<footer></footer>
-	</div>
+	</div>		
 </body>
 </html>
