--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			<h2> Men's Physique and Social Media </h2>
 			</header>
 			
-			<article><img src="html2-project/assets/images/IMG_1652.jpg" width="400px"></article>
+			<article><img src="assets/images/IMG_1652.jpg" alt="mensphysiquepicture" width="400px"></article>
 <p>
 				Men's physique, is a competition class in two of the most prestigious divisions. The divisions are the National Physique Committee, and Internation Federation of Bodybuilding. The sport/competition is not a maintstream subject of today's soceity. Both, I believed to be heavily impacted due to social media. 
 </p>
 			
-			<article><img src="html2-project/assets/images/IMG_9754.jpg" width="400px"></article>
+			<article><img src="assets/images/IMG_9754.jpg" alt="cameraholding" width="400px"></article>
 			
 <p> 
 				Social media, has the power to build up, expose or destroy anything with the simple actions of a few clicks. Unfortunately, doing competitions that involve a strong commitment to a diet program and a hyperthrophy routine are not very mainstream as playing football. 
@@ -34,7 +34,7 @@
 			
 			</p>
 			
-			<article><img src="html2-project/assets/images/IMG_1484.JPG" width="400px"></article>
+			<article><img src="assets/images/IMG_1484.JPG" alt="picturewithfriend" width="400px"></article>
 			
 			<header>
 				<h2> There's More with Social Media! </h2>
@@ -44,18 +44,20 @@
 			
 			</p>
 			
-			<article><img src="html2-project/assets/images/IMG_2509.jpg" width="400px"></article>
+			<article><img src="assets/images/IMG_2509.jpg" alt="clientpicture" width="400px"></article>
 			
-			<article><img src="html2-project/assets/images/LRG_DSC03549.JPG" width="400px"></article>
+			<article><img src="assets/images/LRG_DSC03549.JPG" alt="trophywinner" width="400px"></article>
 			
-			<header> <h2> Conclusion </h2></header>
+			
+			<header> 
+				<h2> Conclusion </h2></header>
 			
 			<p>
 				Overall, Men's Physique can be quite the income when using social media and be wildly known so others around the world can know of this sport. Some look up to the ones competing and reach out to them for training. While others admire their hardwork and discipline to their craft.
 			
 			</p>
 			
-			<article><img src="html2-project/assets/images/IMG_3226.jpg" width="400px"></article>
+			<article><img src="assets/images/IMG_3226.jpg" alt="focusingman" width="400px"></article>
 			
 			
 			
